--- a/index.html
+++ b/index.html
@@ -33,9 +33,25 @@
         <h1>Inicio</h1>
     </div>
 
-    <div class="nosotros center" id="nosotros">
-        <h1>Nosotros</h1>
-    </div>
+    <div class="nosotros" id="nosotros">
+        <h1 style="text-align: center;">Nosotros</h1>
+        <h2>NUESTRA HISTORIA</h2>
+         <p>Al servicio de la construcción desde 1989 .</p>
+         <p>A través de los años se han incorporado las nuevas generaciones de profesionales, conformando lo que hoy en día es una de las constructoras referentes en el mercado Local y Nacional. Durante nuestra trayectoria, hemos ejecutado obras de Arquitectura, Ingeniería entre otras.</p>
+         <p>Desde su fundación se plantearon los objetivos, los cuales son los lineamientos de nuestro trabajo: Precisión, Calidad, Innovación, Seguridad en el trabajo y Respeto por el Medio Ambiente.</p>
+         <p>Convencidos, que el cumplimiento de los mismos producen un constante crecimiento propio, de nuestros proveedores y de nuestros clientes, logrando la satisfacción de todos los involucrados.</p>
+         <h2>EL CAMINO QUE ELEGIMOS</h2>
+         <h2>Nuestros Valores:</h2>  
+         <ol>Compromiso ético con el cliente y la organización.</ol> 
+         <ol>Rentabilidad sustentable en el tiempo.</ol> 
+         <ol> Creatividad para aportar soluciones innovadoras.</ol> 
+         <ol>Adaptabilidad a los cambios.</ol> 
+         <ol>Compromiso con el medio ambiente</ol> 
+         <h2>Nuestra Misión:</h2>
+         <p>Somos una empresa confiable, con una elevada capacidad para dar respuesta adecuada a las necesidades del cliente en tiempo y calidad, con personal altamente capacitado, motivado y utilizando tecnología de primer nivel.</p>
+         <h2>Nuestra Visión:</h2>  
+         <p>Buscamos posicionarnos entre las mejores constructoras de Córdoba y el País, materializado a través de obras de calidad y el cumplimiento de los plazos estipulados.</p>     
+     </div>
 
     <div class="productos center" id="productos">
         <h1>Productos</h1>
