--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto pin</title>
     <link rel="stylesheet" href="./css.css">
-    <link rel="stylesheet" href="./Estilos.css">
-    <link rel="stylesheet" href="./stiloslider.css">
-    <link rel="stylesheet" href="./estilos2.css">
 </head>
 
 <body>
@@ -138,8 +135,8 @@
             <input type="submit" value="ENVIAR" id="boton">
     
         </form>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13622.334003808663!2d-64.169913169465!3d-31.398045943846824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x982df9890387c938!2sConstructora%20Rizoma!5e0!3m2!1ses-419!2sar!4v1647976146625!5m2!1ses-419!2sar" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-
 
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
     <script src="./js.js"></script>
@@ -149,7 +146,7 @@
            <div class ="container__footer">  
         <div class="box__footer" >
              <div class="logo">
-                  <img src="Images/logo-magtimus.png"   alt="  ">                
+                  <img src="Images/logo-magtimus.png"   alt="">                
 
              </div>
              <div class="terms">
