--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
         </div>
     </div>
-
+<!--
     <div class="nosotros" id="nosotros">
         <h1 style="text-align: center;">Nosotros</h1>
         <h2>NUESTRA HISTORIA</h2>
@@ -62,7 +62,36 @@
          <p>Somos una empresa confiable, con una elevada capacidad para dar respuesta adecuada a las necesidades del cliente en tiempo y calidad, con personal altamente capacitado, motivado y utilizando tecnología de primer nivel.</p>
          <h2>Nuestra Visión:</h2>  
          <p>Buscamos posicionarnos entre las mejores constructoras de Córdoba y el País, materializado a través de obras de calidad y el cumplimiento de los plazos estipulados.</p>     
-     </div>
+     </div> -->
+      <!--Dos textos y un Border Left Naranja-->
+    
+        <h1 class="seccion2" id="nosotros">NUESTRA HISTORIA</h1>
+        <article class="section2 container-fluid">
+            <section class="section2__container">
+                <div class="section2__container__texto">
+                        <p class="section2__texto container-sm">
+                        Al servicio de la construcción desde 1989 .                        
+                        A través de los años se han incorporado las nuevas generaciones de profesionales, conformando lo que hoy en día es una de las constructoras referentes en el mercado Local y Nacional. Durante nuestra trayectoria, hemos ejecutado obras de Arquitectura, Ingeniería entre otras. ​
+                        Desde su fundación se plantearon los objetivos, los cuales son los lineamientos de nuestro trabajo: Precisión, Calidad, Innovación, Seguridad en el trabajo y Respeto por el Medio Ambiente.
+                        Convencidos, que el cumplimiento de los mismos producen un constante crecimiento propio, de nuestros proveedores y de nuestros clientes, logrando la satisfacción de todos los involucrados.
+                        </p>
+                    <p class="section2__titulo">Nuestros Valores:</p>
+                    <p class="section2__texto container-sm">
+                        <ol>* Compromiso ético con el cliente y la organización.</ol> 
+                        <ol>* Rentabilidad sustentable en el tiempo.</ol> 
+                        <ol>* Creatividad para aportar soluciones innovadoras.</ol> 
+                        <ol>* Adaptabilidad a los cambios.</ol> 
+                        <ol>* Compromiso con el medio ambiente</ol>
+                    </p>
+                        <p class="section2__titulo">Nuestra Misión:</p>   
+                          <p> Somos una empresa confiable, con una elevada capacidad para dar respuesta adecuada a las necesidades del cliente en tiempo y calidad, con personal altamente capacitado, motivado y utilizando tecnología de primer nivel.
+                          </p>
+                            <p class="section2__titulo">Nuestra Visión:</p>  
+                       <p> Buscamos posicionarnos entre las mejores constructoras de Córdoba y el País, materializado a través de obras de calidad y el cumplimiento de los plazos estipulados.</p>
+                        </p>
+                    </div>
+            </section>
+        </article>
 
     <div class="productos center" id="productos">
         <h1>Productos</h1>
